--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
 
 <head>
 	<meta charset="utf-8">
-	<title>title</title>
+	<title>chuck</title>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<link rel="stylesheet" href="css/main.css">
@@ -534,17 +534,17 @@
 						<div class="news-item">
 							<img src="img/news.jpg" alt="news image" class="news-img">
 							<p class="date">01 червня 2020, 17:25</p>
-							<p class="news-text">У Запоріжжі співробітники СБУ затримали автобуси з паломниками - УПЦ</p>
+							<a href="#" class="news-text">У Запоріжжі співробітники СБУ затримали автобуси з паломниками - УПЦ</a>
 						</div>
 						<div class="news-item">
 							<img src="img/news.jpg" alt="news image" class="news-img">
 							<p class="date">01 червня 2020, 17:25</p>
-							<p class="news-text">Священника УПЦ МП оштрафували на 34 тисячі за порушення карантину на Великдень</p>
+							<a href="#" class="news-text">Священника УПЦ МП оштрафували на 34 тисячі за порушення карантину на Великдень</a>
 						</div>
 						<div class="news-item">
 							<img src="img/news.jpg" alt="news image" class="news-img">
 							<p class="date">01 червня 2020, 17:25</p>
-							<p class="news-text">У Харкові п'яний священник Московського патріархату спровокував ДТП</p>
+							<a href="#" class="news-text">У Харкові п'яний священник Московського патріархату спровокував ДТП</a>
 						</div>
 					</div>
 				</div>
@@ -558,9 +558,7 @@
 </footer>
 	</div>
 
-
 	<script src="js/jquery.min.js"></script>
     <script src="js/common.js"></script>
-
 </body>
 </html>
