--- a/articles.html
+++ b/articles.html
@@ -47,7 +47,7 @@
 </header>
 
     <div id="wrapper-content">
-        <section class="articles">
+        <div class="articles">
             <div class="container">
                 <ul class="list-article">
                     <li>
@@ -92,7 +92,7 @@
                     </li>
                 </ul>
             </div>
-        </section>
+        </div>
     </div>
     <footer class="footer">
     <div class="container">
