changes made as per document

--- a/articles.html
+++ b/articles.html
@@ -51,7 +51,7 @@
             <div class="container">
                 <ul class="list-article">
                     <li>
-                        <img src="img/news.jpg" alt="news image" class="article-img">
+                        <a href="#"><img src="img/news.jpg" alt="news image" class="article-img"></a>
                         <div class="article__content">
                             <p class="date">01 червня 2020, 17:25</p>
                             <a href="#" class="article-title">Родина настоятеля Іллінської церкви має автопарк та коштовну нерухомість</a>
@@ -59,7 +59,7 @@
                         </div>
                     </li>
                     <li>
-                        <img src="img/news.jpg" alt="news image" class="article-img">
+                        <a href="#"><img src="img/news.jpg" alt="news image" class="article-img"></a>
                         <div class="article__content">
                             <p class="date">01 червня 2020, 17:25</p>
                             <a href="#" class="article-title">У Запоріжжі співробітники СБУ затримали автобуси з паломниками - УПЦ</a>
@@ -67,7 +67,7 @@
                         </div>
                     </li>
                     <li>
-                        <img src="img/news.jpg" alt="news image" class="article-img">
+                        <a href="#"><img src="img/news.jpg" alt="news image" class="article-img"></a>
                         <div class="article__content">
                             <p class="date">01 червня 2020, 17:25</p>
                             <a href="#" class="article-title">Священника УПЦ МП оштрафували на 34 тисячі за порушення карантину на Великдень</a>
@@ -75,7 +75,7 @@
                         </div>
                     </li>
                     <li>
-                        <img src="img/news.jpg" alt="news image" class="article-img">
+                        <a href="#"><img src="img/news.jpg" alt="news image" class="article-img"></a>
                         <div class="article__content">
                             <p class="date">01 червня 2020, 17:25</p>
                             <a href="#" class="article-title">У Харкові п'яний священник Московського патріархату спровокував ДТП</a>
@@ -83,7 +83,7 @@
                         </div>
                     </li>
                     <li>
-                        <img src="img/news.jpg" alt="news image" class="article-img">
+                        <a href="#"><img src="img/news.jpg" alt="news image" class="article-img"></a>
                         <div class="article__content">
                             <p class="date">01 червня 2020, 17:25</p>
                             <a href="#" class="article-title">Священник з Covid-19 на Буковині збирається й далі проводити служби</a>
