--- a/region.html
+++ b/region.html
@@ -111,17 +111,17 @@
                 <h2 class="title-v2">Матеріали про церкви</h2>
                 <div class="news-row">
                     <div class="news-item">
-                        <img src="img/news.jpg" alt="news image" class="news-img">
+                        <a href="#"><img src="img/news.jpg" alt="news image" class="news-img"></a>
                         <p class="date">01 червня 2020, 17:25</p>
                         <a href="#" class="news-text">У Запоріжжі співробітники СБУ затримали автобуси з паломниками - УПЦ</a>
                     </div>
                     <div class="news-item">
-                        <img src="img/news.jpg" alt="news image" class="news-img">
+                        <a href="#"><img src="img/news.jpg" alt="news image" class="news-img"></a>
                         <p class="date">01 червня 2020, 17:25</p>
                         <a href="#" class="news-text">Священника УПЦ МП оштрафували на 34 тисячі за порушення карантину на Великдень</a>
                     </div>
                     <div class="news-item">
-                        <img src="img/news.jpg" alt="news image" class="news-img">
+                        <a href="#"><img src="img/news.jpg" alt="news image" class="news-img"></a>
                         <p class="date">01 червня 2020, 17:25</p>
                         <a href="#" class="news-text">У Харкові п'яний священник Московського патріархату спровокував ДТП</a>
                     </div>
